# chartbook

./: .cursorrules  .env.example  .gitignore  .latexmkrc  MANIFEST.in  README.md  chartbook.toml  dodo.py  dodo_debug_all.py  environment.yml  pyproject.toml  r_requirements.txt  requirements.txt  set_env.bat
.github/workflows/: test.yml
docs_src/: conf.py  dataframes.md  pipelines.md
docs_src/_templates/: dataframe_specs.md  pipeline_specs.md
example/mychartbook/: pipeline.json
example/mychartbook/_output/to_be_published/_data/: CoinMarketCap.parquet  CoinMarketCap.xlsx
example/mychartbook/_output/to_be_published/_output/: repo_rates_normalized_w_balance_sheet.html
example/mychartbook/_output/to_be_published/docs_src/charts/: COIN_CoinMarketCap_chart.md  repo_rates_normalized_w_balance_sheet.md
example/mychartbook/_output/to_be_published/docs_src/dataframes/: COIN_dig_asset_market_cap.md
example/to_be_published/COIN/: dodo.py  pipeline.json
example/to_be_published/COIN/docs_src/_templates/: chart_entry_bottom.md  chart_entry_top.md  dataframe_entry_top.md  dataframe_specs.md  pipeline_specs.md
example/to_be_published/EX/: chartbook.toml
example/to_be_published/EX/_output/to_be_published/: dodo.py
example/to_be_published/EX/_output/to_be_published/_data/: repo_public.parquet  repo_public_relative_fed.parquet
example/to_be_published/EX/_output/to_be_published/_output/: repo_rates_normalized.html
examples/COIN/: pipeline.json
examples/COIN/docs_src/charts/: COIN_CoinMarketCap_chart.md
examples/COIN/docs_src/dataframes/: COIN_dig_asset_market_cap.md
examples/EX/: dodo.py  pipeline.json
examples/EX/_data/: repo_public.xlsx
examples/EX/_output/to_be_published/_data/: repo_public_relative_fed.xlsx
examples/EX/_output/to_be_published/_output/: repo_rates.html
examples/EX/_output/to_be_published/docs_src/charts/: repo_rates_normalized.md
examples/EX/docs_src/dataframes/: repo_public.md  repo_public_relative_fed.md
examples/mychartbook/: chartbook.toml  pipeline.json
examples/mychartbook/_output/to_be_published/: README.md  dodo.py
examples/mychartbook/_output/to_be_published/docs_src/charts/: COIN_CoinMarketCap_chart.md  repo_rates.md
examples/mychartbook/_output/to_be_published/docs_src/dataframes/: COIN_dig_asset_market_cap.md  repo_public_relative_fed.md
src/: config.py  install_packages.r  misc_tools.py  pipeline_publish.py
src/chartbook/: __init__.py  cli.py  config.py  generator.py  pipeline_publish.py
src/chartbook/docs_src/: conf.py
src/chartbook/docs_src_chartbook/: conf.py  contributing.md  dataframes.md  index.md  pipelines.md
src/chartbook/docs_src_chartbook/_templates/: layout.html
src/chartbook/docs_src_pipeline/: conf.py  index.md
src/chartbook/docs_src_pipeline/_templates/: chart_entry_bottom.md
src/chartbook/docs_src_pipeline/dataframes/: repo_public.md
src/chartbook/templates/: chartbook.toml
tests/: test_generate_command.py
