[project]
name = "chartbook"
dynamic = ["version"]
description = "A tool for generating chart documentation websites"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "All Rights Reserved"}
keywords = ["Dashboards", "Catalogs", "Data", "Analytics"]
authors = [
    { name = "Jeremiah Bejarano", email = "Jeremiah.Bejarano@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "ablog>=0.11.11",
    "Jinja2>=3.1.4",
    "linkify-it-py>=2.0.3",
    "markdown-it-py>=3.0.0",
    "mypy-extensions>=1.0.0",
    "myst-nb>=1.1.2",
    "myst-parser>=2.0.0",
    "polars>=1.9.0",
    "pydata-sphinx-theme==0.15.4",
    "pytest",
    "python-decouple>=3.8",
    "sphinx_design>=0.6.1",
    "sphinx_external_toc>=1.0.1",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-book-theme>=1.1.3",
    "sphinx-comments>=0.0.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-jupyterbook-latex>=1.0.0",
    "sphinx-multitoc-numbering>=0.1.3",
    "sphinx-thebe>=0.3.1",
    "sphinx-togglebutton>=0.3.2",
    "Sphinx>=7.3.7",
    "sphinxcontrib-applehelp>=2.0.0",
    "sphinxcontrib-bibtex>=2.6.3",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=2.0.0",
    "sphinxcontrib-serializinghtml>=2.0.0",
    "sphinxext-opengraph>=0.9.1",
    "sphinxext-rediraffe>=0.2.7",
    "click>=8.1.7",
    "tomli>=2.2.1",
    "tomli-w>=1.1.0",
]

[project.scripts]
chartbook = "chartbook.cli:main"

[project.urls]
Documentation = "https://github.com/jmbejara/chartbook#readme"
Issues = "https://github.com/jmbejara/chartbook/issues"
Source = "https://github.com/jmbejara/chartbook"

[tool.hatch.version]
path = "src/chartbook/__about__.py"

[tool.coverage.run]
source_pkgs = ["chartbook", "tests"]
branch = true
parallel = true
omit = ["src/chartbook/__about__.py"]

[tool.coverage.paths]
chartbook = ["src/chartbook", "*/chartbook/src/chartbook"]
tests = ["tests", "*/chartbook/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/chartbook"]
include = ["src/chartbook/data/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/chartbook"]
sources = ["src"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::Warning"]
